--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -26,7 +26,15 @@ jobs:
       run: flake8 --exclude=*migrations/*,venv/*,tests/* --per-file-ignores=settings.py:E501
 
     - name: Test with Django Unittest
-      run: python manage.py test
+      run: |
+        echo DB_ENGINE=django.db.backends.postgresql > .env
+        echo DB_NAME=postgres >> .env
+        echo POSTGRES_USER=postgres >> .env
+        echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+        echo DB_HOST=db >> .env
+        echo DB_PORT=5432 >> .env
+        echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
+        python manage.py test
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
