--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -89,6 +89,7 @@ jobs:
           sudo docker pull dmitriyperetoka/foodgram:latest
           sudo docker-compose up -d
           sudo docker-compose exec -T web python manage.py collectstatic --no-input
+          sudo docker-compose exec -T web python manage.py migrate
           sudo docker image prune -f
 
   send_message:
