--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -64,7 +64,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
         source: "docker-compose.yaml, nginx/default.conf"
-        target: "~/foodgram-project"
+        target: "~/foodgram"
     - name: executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
       with:
@@ -73,7 +73,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
-          cd foodgram-project
+          cd foodgram
           echo DB_ENGINE=django.db.backends.postgresql > .env
           echo DB_NAME=postgres >> .env
           echo POSTGRES_USER=postgres >> .env
