--- a/.github/workflows/foodgram_workflow.yaml
+++ b/.github/workflows/foodgram_workflow.yaml
@@ -23,7 +23,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Lint with flake8
-      run: flake8 --exclude=*migrations/*,venv/*,tests/* --per-file-ignores=settings.py:E501
+      run: flake8 --exclude=*migrations/*,venv/* --per-file-ignores=settings.py:E501
 
     - name: Test with Django Unittest
       run: |
